--- a/src/scss/base/_form.scss
+++ b/src/scss/base/_form.scss
@@ -1,490 +1,72 @@
-.form-grey-wrapper{
-	background: #f8f9fb;
-	padding-block: 40px 60px;
-}
-.form-wrapper-title{
-	font-family: 'Montserrat';
-	font-weight: 400;
-	font-size: 30px;
-	line-height: 1.3;
-	text-align: center;
-	color: #333;
-	max-width: 900px;
-	margin-inline: auto;
-	margin-bottom: 30px;
-	@media (max-width: 1023px) {
-	font-size: 20px;
-	}
-}
-.custom-form{
-	font-family: var(--font-family);
-	font-size: 18px;
-	font-weight: 400;
-	color: var(--text);
-	display: grid;
-	grid-template-columns: 1fr;
-	.txt-center{
-		text-align: center;
-	}
-	.h-20{
-		font-weight: 600;
-		font-size: 20px;
-		line-height: 1.3;
-		color: #333;
-		margin-bottom: 20px;
-		@media (max-width: 767px) {
-		font-size: 16px;
-		}
-	}
-	
-	.fs-16{
-		font-size: 16px;
-		@media (max-width: 767px) {
-		  font-size: 15px;
-		}
-	}
-	.fieldset{
-        display: grid;
-		grid-template-columns: 1fr;
-		gap:25px;
-		padding-top: 30px;
-		padding-bottom: 30px;
-		border-bottom: 1px solid #e9e9e9;
-		@media (max-width: 1023px) {
-			padding-top: 20px;
-			padding-bottom: 20px;
-		}
-	}
-	.fieldset.border-0{border:0;}
-	.fieldset-content{
-		display: grid;
-		grid-template-columns: 1fr;
-		gap:25px;
-
-	}
-	.fieldset-title{
-		font-weight: 600;
-		font-size: 24px;
-		line-height: 1.3;
-		color: var(--text);
-	}
-	.fieldset-group{
-		display: grid;
-		grid-template-columns: 1fr;
-		gap:20px;
-		.h-20.txt-center {
-			padding-top: 20px;
-			// padding-bottom: 10px;
-		}
-	}
-	.fieldset-group.gap-10{
-		gap:10px;
-	}
-	.fieldset-group.fieldset-sticky-header{ row-gap:20px;}
-	.fieldset-group-title{
-		font-weight: 600;
-		font-size: 20px;
-		line-height: 1.3;
-		color: #333
-	}
-	.fieldset-cell-name{
-		line-height: 1.2;
-		.fs-15{display: block;}
-	}
-	@media (max-width: 1023px) {
-	   font-size: 15px;
-	  
-	   .fieldset{gap:20px;}
-	   .fieldset-content{gap:20px;}
-	   .fieldset-title{font-size: 18px;}
-	   .fieldset-group-title{font-size: 16px;}
-	}
-    input, textarea, button{
-		font-size: inherit;
-		font-family: inherit;
-		border:0;
-		background: none;
-		padding: 0;
-		&::placeholder{
-			font-size: inherit;
-			font-family: inherit;
-		}
-		&:focus, &:active{outline: none;}
-		
-	}
-	
-	.form-inp, .form-textarea{
-		display: block;
-		width: 100%;
-		flex:1;
-		height: 50px;
-		border-radius: 4px;
-		padding-inline:12px;
-		font-size: 18px;
-		resize: none;
-		color: var(--text);
-		@media (max-width: 1023px) {
-		  padding-inline: 12px;
-		   font-size: 16px;
-		}
-	}
-	.form-inp{
-		@media (max-width: 767px) {
-		  padding-inline: 5px;
-		}
-	}
-	.form-textarea{
-		height: 100px;
-		min-height: 100px;
-		border:1px solid var(--prim);
-		border-radius: 4px;
-		background: #fff; 
-	}
-	.fs-15{font-size: 15px;}
-	.fs-18{font-size: 18px;}
-    .form-span{
-		display: flex;
-		align-items: center;
-		width: fit-content;
-		padding-right: 12px;
-		color: #949494;
-		font-size: 15px;
-		white-space: nowrap;
-		@media (max-width: 767px) {
-		  padding-right: 8px;
-		  font-size: 13px;
-		  &.hide-xs{display: none;}
-		}
-	}
-	@media (max-width: 1023px) {
-	   font-size: 15px;
-	}
-	.form-item{
-		display: flex;
-		border-radius: 4px;
-		background-color: #fff;
-		border: 1px solid var(--prim);
-
-	}
-	.form-item-group{
-		display: flex;
-		flex-direction: column;
-		gap:6px;
-		height: 100%;
-		.form-item{flex-shrink: 0;}
-		.form-label{flex:1; align-items: flex-end;}
-		@media (max-width: 767px) {
-		.form-label{display: block;}
-		}
-	}
-	.hide-xl{display: none; font-size: 12px;}
-	@media (max-width: 767px) {
-		.hide-xl{display:inline-block; padding-left:2px; color: #777}
-		}
-	.form-label{
-		display: inline-flex;
-		align-items: center;
-	}
-	.inputs-row{
-		display: flex;
-		gap:60px;
-		&>*{flex:1;}
-		@media (max-width: 1199px) {gap:20px;}
-	}
-
-	// fake checkbocx
-	.form-radio-row, .form-checkbox-row{
-		display: flex;
-		align-items: center;
-		flex-wrap: wrap;
-		row-gap:15px;
-		gap:30px;
-		min-height: 40px;
-		@media (max-width: 767px) {
-		min-height: unset;
-		gap:20px;
-		padding-top: 10px;
-		}
-	}
-	.form-two-cols .form-radio-row{
-		min-height: 50px;
-		@media (max-width: 767px) {
-		min-height: unset;
-		}
-	}
-	.form-radio-row.row-mobile{
-		@media (max-width: 767px) {
-			flex-direction: column;
-			align-items:flex-start;
-			gap:15px;
-		}
-	}
-	.form-radio-label{
-		position: relative;
-		display: flex;
-		align-items: center;
-		column-gap: 6px;
-		cursor:pointer;
-		input[type="checkbox"],input[type="radio"]{
-			width: 0.01px;
-			height: 0.01px;
-			position: absolute;
-			appearance: none;
-			top: 0;
-			left: 0;
-		}
-		
-	}
-	.form-radio-label{
-		.fake-radio{
-			width: 20px;
-			height: 20px;
-			border-radius: 50%;
-			border: 1px solid var(--grey);
-			transition: border .3s; 
-			flex-shrink:0;background-color: #fff;}
-		input[type="radio"]:checked + .fake-radio{
-			border:5px solid var(--prim);
-		}
-	}
-	.form-checkbox-label{
-		display: flex;
-		align-items: center;
-		column-gap:12px;
-		line-height: 1.2;
-		input{
-			flex-shrink:0;
-			width: 20px;height: 20px;
-			border-radius: 4px;
-			border:1px solid var(--grey);
-		background: #fff;
-		}
-		input:checked{
-			border:1px solid var(--prim);
-		}
-
-	}
-	.special-checkbox-wrapper{
-		.inner-row-title{
-			font-size: 15px;
-			line-height: 1.2;
-			color: #333;
-			margin-bottom: -4px;
-			display: none;
-		}
-		@media (max-width: 767px) {
-			row-gap: 10px;
-		.inner-row-title{display: block;}
-		.form-checkbox-name{display: none;}
-		.fieldset-cell{
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			gap:20px;
-		}
-		}
-	}
-	.checkbox-group-rows{
-		display: grid;
-		grid-template-columns: 1fr;
-		row-gap:20px;
-	}
-
-}
-.custom-form{
-	.fieldset-sticky-row{
-		display: grid;
-		align-items: center;
-		grid-template-columns: 350px 1fr;
-		grid-template-columns: 282px 1fr;
-		column-gap:15px;
-		row-gap:20px;
-		@media (max-width: 1023px) {
-		  grid-template-columns: 1fr;
-		  row-gap:6px;
-		}
-	}
-	.fieldset-sticky-row.align-self-start{align-items: flex-start;}
-	.fieldset-sticky-cols{
-		display: grid;
-		grid-template-columns:1fr;
-		gap:15px;
-	}
-	.fieldset-sticky-cols .inner-row{
-		display: flex;
-		column-gap:15px;
-		@media (max-width: 1023px) {
-		  column-gap:10px;
-		}
-	}
-	.inner-row .fieldset-cell{
-		flex:1;
-		min-height: 46px;
-	}
-	.inner-row.h-auto  .fieldset-cell{min-height: unset}
-	.fieldset-cell--center .fieldset-cell{
-		display: flex;
-		justify-content: center;
-		align-items:center;
-		column-gap: 20px;
-	}
-   .fieldset-cell--column .fieldset-cell{
-		display: grid;
-		grid-template-columns: 1fr;
-		align-items:center;
-		gap: 15px;
-   }
-	.inner-row .fieldset-cell .form-inp{height: 46px;}
-	.fieldset-sticky-title{
-		font-weight: 600;
-		font-size: 20px;
-		line-height: 130%;
-		color: #333;
-		text-align: center;
-		
-		background: #f8f9fb;
-		position: sticky;
-		top:0;
-		@media (max-width: 1023px) {
-		  row-gap:10px;
-		}
-	}
-	.fieldset-sticky-title .fieldset-cell{display: flex;align-items: center; justify-content: center;}
-	
-	.txt-grey{color: var(--grey);}
-}
-.custom-form .fieldset-sticky-title.is-fixed {
-  position: fixed;
-  z-index: 1000;
-  /* top зададим из JS (offset) */
-}
-
-.custom-form .fieldset-sticky-title.is-bottom {
-  position: absolute;
-  z-index: 1000;
-}
-.custom-form .form-button-wrapper{
-	display: flex;
-	justify-content: center;
-}
-.custom-form .form-button{
-	height: 48px;
-	display: inline-flex;
-	padding: 0;
-	padding-left: 36px;
-	padding-right: 36px;
-	align-items: center;
-	cursor: pointer;
-	font-family: inherit;
-	border-radius: 4px;
-	color: white;
-	font-weight: 500;
-	font-size: 12px;
-	line-height: 131%;
-	letter-spacing: 0.01em;
-	text-transform: uppercase;
-	background-color: var(--prim);
-	transition: .3s; 
-	
-}
-.custom-form .agree-block{
-	font-size: 15px;
-	line-height: 1.3;
-	input[type="checkbox"]{
-		width: 18px;
-		height: 18px;
-		flex-shrink: 0;
-		display: block;
-	}
-	.agree-block-label{display: flex; column-gap:12px; max-width: 580px; margin-inline: auto;
-	}
-	@media (max-width: 1023px) {
-	font-size: 13px;
-	}
-}
-.custom-form .form-footer{
-	display: flex;
-	flex-direction: column;
-	row-gap:30px;
-	p{margin: 0;}
-	@media (max-width: 1023px) {
-	row-gap:20px;
-	}
-}
-.custom-form .form-item.error{
+.form-item, .form-item-slim{
 	position: relative;
-	border-color: #dd3134;
-	.error-text{
-		position: absolute;
-		display: block;
-		left:0;
-		bottom: -17px;
-		font-weight: 500;
-		font-size: 13px;
-		line-height: 1.1;
-		letter-spacing: -0.03em;
-		color: #dd3134;
-	}
-}
-.custom-form {
-	input:-webkit-autofill,
-	input:-webkit-autofill:hover,
-	input:-webkit-autofill:focus,
-	input:-webkit-autofill:active,
-	textarea:-webkit-autofill,
-	textarea:-webkit-autofill:hover,
-	textarea:-webkit-autofill:focus,
-	textarea:-webkit-autofill:active {
-		-webkit-box-shadow: 0 0 0px 1000px white inset !important; 
-		-webkit-text-fill-color: #333 !important; 
-	}
-	input[type=number]::-webkit-outer-spin-button,
-	input[type=number]::-webkit-inner-spin-button {
-		-webkit-appearance: none;
-		margin: 0; 
-	}
-
-	input[type=number] {
-		-moz-appearance: textfield; 
-	}
-
-	input[type=number] {
-		appearance: textfield;
-		-webkit-appearance: textfield;
-		-moz-appearance: textfield;
-	}
-}
-.form-description{
-	.form-list-title{margin-bottom: 20px;}
-	.form-image{
-		border-radius: 12px;
-		background-color: #fff;
+	width: 100%;
+	.inp,  .textarea{
 		width: 100%;
-		display: flex;
-		justify-content: center;
-		img{
-			width: 100%;
-			aspect-ratio: 430/305;
-			object-fit: contain;
+		display: block;
+		border: 1px solid #b1b8d5;
+		border-radius: 5px;
+		height: 60px;
+		background: var(--belyy);
+		font-family: var(--font-family);
+		font-weight: 500;
+		font-weight: 600;
+		font-size: 16px;
+		color: var(--zagolovok);
+		padding-left: 20px;
+		padding-right: 20px;
+		&::placeholder{
+			font-family: inherit;
+			font-size: inherit;
+			font-weight: 500;
+			color: var(--vtorostepennyy-tekst);
 		}
-		@media (max-width: 767px) {
-		img{aspect-ratio:330/250;}
+		&:focus{
+			outline:none;
+			border: 2px solid var(--siniy);
+			background: var(--fon);
+			padding-left: 19px;
+			padding-right: 19px;
 		}
 	}
-	.form-list{
-		font-size: 15px;
-		ul{
-			margin: 0;
-			padding: 0;
-			margin-left: 1em;
-		}
-		li{color: #777;}
-		li::marker{font-size: 10px;}
-		li+li{margin-top: 8px;}
+	
+	
+	.textarea{
+		height: 160px;
+		padding: 20px;
+		&:focus{padding: 19px;}
+	}
+	.inp.error, .textarea.error{
+		border: 2px solid var(--oshibka);
 	}
 }
-.custom-form{
-	.form-info-text{
+.form-item-slim{
+   .inp{
+		height: 50px;
 		
 	}
+}
+
+.inp-placeholder {
+	position: absolute;
+	left: 20px;
+	top:0;
+	transform: translateY(22px);
+	
+	z-index: 2;
+	pointer-events: none;
+	font-weight: 400;
+	font-size: 16px;
+	color: var(--vtorostepennyy-tekst);
+	transition: .3s; 
+}
+
+.form-item.form-item--focus{
+	.inp-placeholder{
+		font-size: 13px;
+		transform: translateY(8px);
+	}
+}
+.form-item.form-item--special{
+	.inp{padding-top: 15px;}
 }
