--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,6 +5,7 @@
 @use "base/_form-grid";
 @use "base/_icons";
 @use "base/_form";
+@use "base/_form-customs";
 // @use "base/_dropdown";
 
 // @use "base/_test";
