--- a/src/pug/ui/forms.pug
+++ b/src/pug/ui/forms.pug
@@ -61,6 +61,12 @@ html(lang="ru")
 						input.inp(type="text" name="inp_name")
 						.inp-placeholder Имя *
 
+				br
+				h4 Custom checkbox
+				
+				label.custom-item-label
+					input(type="checkbox" name="")
+					span.custom-checkbox
 				
 				
 				script.
