--- a/src/pug/ui/icons.pug
+++ b/src/pug/ui/icons.pug
@@ -48,5 +48,17 @@ html(lang="ru")
 						svg.svg-txt-center
 							use(href='./img/logo-text.svg#logo-txt-center')
 					br
+					svg.svg-search
+						use(href='../img/sprite.svg#svg-search')
+					pre.
+						svg.svg-search
+							use(href='./img/sprite.svg#svg-search')
+					
+					svg.svg-bin
+						use(href='../img/sprite.svg#svg-bin')
+					pre.
+						svg.svg-bin
+							use(href='./img/sprite.svg#svg-bin')
+					
 					
 
