--- a/src/scss/base/_icons.scss
+++ b/src/scss/base/_icons.scss
@@ -18,3 +18,13 @@ svg{display: inline-block;}
 .svg-txt-center{
 	color: #5272FF;
 }
+.svg-search{
+	width: 24px;height: 24px;
+	color: #5272FF;
+	fill:transparent;
+}
+.svg-bin{
+	width: 22px;
+	height: 22px;
+	color:#5272FF;
+}
