--- a/src/pug/ui/forms.pug
+++ b/src/pug/ui/forms.pug
@@ -67,8 +67,16 @@ html(lang="ru")
 				label.custom-item-label
 					input(type="checkbox" name="")
 					span.custom-checkbox
+				pre.
+					label.custom-item-label
+						input(type="checkbox" name="")
+						span.custom-checkbox
+				br
+				h4 Custom checkbox
 				
-				
+				label.custom-item-label
+					input.error(type="checkbox" name="")
+					span.custom-checkbox
 				script.
 					const specialFormsItems = document.querySelectorAll('.form-item--special');
 					function activatePlaceholder(element, parent){
