--- a/src/pug/ui/ui-navigation.pug
+++ b/src/pug/ui/ui-navigation.pug
@@ -13,6 +13,8 @@
 				
 				li
 					a(href="icons.html") Иконки
+				li
+					a(href="buttons.html") Кнопки
 				
 				li
 					a(href="forms.html") Формы
