--- a/src/scss/base/_form-customs.scss
+++ b/src/scss/base/_form-customs.scss
@@ -23,11 +23,15 @@
 		background-size: 0;
 		background-position: center;
 		background-repeat: no-repeat;
-		transition: .3s; 
+		// transition: .3s; 
 	}
 	input[type="checkbox"]:checked + span.custom-checkbox{
 		background-size: 13px 12px;
 		border: 2px solid var(--siniy);
+	}
+	input.error[type="checkbox"] + span.custom-checkbox{
+		
+		border: 2px solid var(--oshibka);
 	}
 }
 
