--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,6 +2,7 @@
 @use "base/_var" as *;
 @use "base/_base";
 @use "base/_typography";
+@use "base/_buttons";
 @use "base/_form-grid";
 @use "base/_icons";
 @use "base/_form";
