--- a/src/pug/ui/buttons.pug
+++ b/src/pug/ui/buttons.pug
@@ -33,4 +33,14 @@ html(lang="ru")
 					pre.
 						button.btn-primary(disabled) Подробнее
 						button.btn-primary.disabled. Подробнее
+					hr
+					svg.svg-cross
+						use(href='../img/sprite.svg#svg-cross')
 					
+					pre.
+						svg.svg-cross
+							use(href='./img/sprite.svg#svg-cross')
+					hr
+					a.btn-cross(href="#!" )
+					pre.
+						a.btn-cross(href="#!" )
