--- a/src/pug/ui/typography.pug
+++ b/src/pug/ui/typography.pug
@@ -61,3 +61,10 @@ html(lang="ru")
 					.fs-13 Font 13px
 					pre.
 						.fs-13 Font 13px
+					hr
+					h3 Links
+					a.link-border(href="#!") Ссылка с подчеркиванием
+					br
+					a.link-border(href="#!") Link underline
+					hr
+					a.link(href="#!") Ссылка простая
