--- a/src/pug/ui/ui-navigation.pug
+++ b/src/pug/ui/ui-navigation.pug
@@ -19,6 +19,6 @@
 				li
 					a(href="forms.html") Формы
 				li
-					a(href="forms-groups.html") Секции формы
+					a(href="nav-menus.html") Верхнее и Нижнее меню
 				li
 					a(href="tabs.html") Табы
