--- a/src/scss/base/_icons.scss
+++ b/src/scss/base/_icons.scss
@@ -19,7 +19,8 @@ svg{display: inline-block;transition: .2s; }
 	color: #5272FF;
 }
 .svg-search{
-	width: 24px;height: 24px;
+	width: 24px;
+	height: 24px;
 	color: #5272FF;
 	fill:transparent;
 }
