--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -34,3 +34,29 @@
 	font-size: 13px;
 	line-height: 15px;
 }
+.link{
+	
+	font-size: 15px;
+	line-height: 140%;
+	color: var(--siniy);
+	&:hover, &:active{
+		color: var(--siniy-dopolnitelnyy);
+		
+	}
+}
+.link-border{
+	display: inline;
+	
+	font-weight: 600;
+	font-size: 13px;
+	line-height: 162%;
+	letter-spacing: 0.02em;
+	text-transform: uppercase;
+	color: var(--siniy);
+	transition: .3s; 
+	border-bottom:1px solid currentColor;
+	&:hover, &:active{
+		color: var(--siniy-dopolnitelnyy);
+		border-bottom:0;
+	}
+}
