--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,7 +9,8 @@
 @use "base/_form-customs";
 // @use "base/_dropdown";
 
-// @use "base/_test";
+@use "blocks/_nav-menus";
+@use "blocks/_header";
 // @import "base/_grids";
 // @import "base/_typography";
 // @import "base/_icons";
