--- a/src/scss/blocks/_nav-menus.scss
+++ b/src/scss/blocks/_nav-menus.scss
@@ -7,6 +7,8 @@
 	background-color: #fff;
 	padding-top: 9px;
 	padding-bottom: 9px;
+	height: 65px;
+	box-shadow: 0 3px 20px 0 rgba(0, 0, 0, 0.1);
 }
 .nav-menu{
 	display: flex;
@@ -33,6 +35,7 @@
 	}
 	.nav-menu-icon{
 		position: relative;
+		height: 30px;
 		.icon-label{
 			position: absolute;
 			top: 0;
