--- a/src/pug/ui/nav-menus.pug
+++ b/src/pug/ui/nav-menus.pug
@@ -30,8 +30,8 @@ html(lang="ru")
 									use(href='../img/sprite.svg#svg-logo-txt')
 				
 							.header-title
-								.h-18 Заголовок
-								.fs-13 Подзаголовок
+								.h-18 Оформление заявки
+								//- .fs-13 Подзаголовок
 				h2.db-h2 Bottom menu
 
 				.container-dashboard__content
