--- a/src/pug/ui/ui-navigation.pug
+++ b/src/pug/ui/ui-navigation.pug
@@ -15,7 +15,8 @@
 					a(href="icons.html") Иконки
 				li
 					a(href="buttons.html") Кнопки
-				
+				li
+					a(href="components.html") Компоненты
 				li
 					a(href="forms.html") Формы
 				li
