--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,6 +11,7 @@
 
 @use "blocks/_nav-menus";
 @use "blocks/_header";
+@use "blocks/_service-card";
 // @import "base/_grids";
 // @import "base/_typography";
 // @import "base/_icons";
