--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -1,3 +1,11 @@
+.h-27{
+	font-family: var(--font-family);
+	font-weight: 700;
+	font-size: 27px;
+	line-height: 119%;
+	text-transform: uppercase;
+	color: var(--zagolovok);
+}
 .h1, .h2, .h3{
 	margin: 0;
 	font-weight: 700;
@@ -29,7 +37,7 @@
 }
 .fs-18{font-weight: 400;}
 .fs-15{font-size: 15px;}
-.fs-16{font-size: 16px;}
+.fs-16{font-size: 16px;line-height: 1.5;}
 .fs-13{
 	font-size: 13px;
 	line-height: 15px;
@@ -41,7 +49,6 @@
 	color: var(--siniy);
 	&:hover, &:active{
 		color: var(--siniy-dopolnitelnyy);
-		
 	}
 }
 .link-border{
@@ -60,3 +67,5 @@
 		border-bottom:0;
 	}
 }
+.txt-upper{text-transform: uppercase;}
+.txt-center{text-align: center;}
