--- a/src/pug/ui/components.pug
+++ b/src/pug/ui/components.pug
@@ -43,9 +43,8 @@ html(lang="ru")
 								p.fs-16 Профессиональная консультация кадастрового инженера по документам на недвижимость
 					br
 					.service-card
-						.service-card__top
+						.service-card__header
 							img(src='../img/consultation.webp', srcset='../img/consultation@2x.webp 2x' width='36' height='36' loading='lazy' alt='img')
-
-						.service-preview__txt
-							.h3 Консультация по документам
-							p.fs-16 Профессиональная консультация кадастрового инженера по документам на недвижимость
+							.h-18 Консультация по документам
+						.service-card__body
+							p.fs-16 ППрофессиональная консультация кадастрового инженера по документам на недвижимость
