--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,6 +12,7 @@
 @use "blocks/_nav-menus";
 @use "blocks/_header";
 @use "blocks/_service-card";
+@use "sections/_authorization";
 // @import "base/_grids";
 // @import "base/_typography";
 // @import "base/_icons";
