--- a/src/pug/pages/authorization.pug
+++ b/src/pug/pages/authorization.pug
@@ -28,6 +28,8 @@ block content
 							input(type="checkbox" name="")
 							span.custom-checkbox
 							span.fs-16 Соглашаюсь с #[a.link(href="#!") политикой обработки персональных данных]
+				.form-button
+					button.btn-primary.disabled(type="submit") Продолжить
 						 
 	
 	-var title = "Авторизация";
