--- a/src/scss/sections/_authorization.scss
+++ b/src/scss/sections/_authorization.scss
@@ -2,12 +2,14 @@
 	background: #EDF0FF;
 	background: linear-gradient(180deg,rgba(237, 240, 255, 1) 0%, rgba(245, 247, 255, 1) 30%, rgba(255, 255, 255, 1) 100%);
 	padding-top: 36px;
+	padding-bottom: 20px;
 	height: 100vh;
 	overflow: hidden;
 	display: flex;
-	flex-direction: column;
-	align-items: center;
-	
+	.container{
+		display: flex;
+		flex-direction: column;
+	}
 }
 .brand-logo{
 	width: 100px;
@@ -17,6 +19,9 @@
 	margin-bottom: 22px;
 }
 .authorization-form{
+	display: flex;
+	flex-direction: column;
+	flex:1;
 	.form-title{
 		min-height: 137px;
 	}
@@ -34,6 +39,9 @@
 	  font-size: 20px;
 	  
 	  &::placeholder{color: var(--vtorostepennyy-tekst);}
+   }
+   .form-body{
+		flex-grow: 1;
    }
 }
 .form-checkbox-group{
