--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -9,7 +9,7 @@
 .h1, .h2, .h3{
 	margin: 0;
 	font-weight: 700;
-	font-family: var(--font-family);
+	// font-family: var(--font-family);
 }
 .h1{
 	font-size: 24px;
