--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -6,6 +6,7 @@ block content
 		.start-page__cards
 			a(href="./ui/colors.html") UI-KIT
 			a(href="./authorization.html") Авторизация-стартовая
+			a(href="./sms-code.html") Код смс
 		
 			
 			
