--- a/src/pug/pages/sms-code.pug
+++ b/src/pug/pages/sms-code.pug
@@ -9,11 +9,11 @@ block content
 			
 			form.authorization-form
 				.form-title
-					.h1 Вход или регистрация
+					.h1 Введите код из смс
 					.form-subtitle
-						.h2 Введите номер телефона
-						.fs-16 Мы отправим на него код подтверждения
-						
+						.fs-16 Мы отправили его на номер
+							span#user-phone +7 (123) 456 78 90
+						a.fs-15.link(href="#!") Изменить номер телефона
 				.form-body
 					.form-item
 						input.inp.phone(type="text" name="phone" placeholder="+ 7 (000) 000 00 00")
