--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,6 +13,7 @@
 @use "blocks/_header";
 @use "blocks/_service-card";
 @use "sections/_authorization";
+@use "sections/_promo";
 // @import "base/_grids";
 // @import "base/_typography";
 // @import "base/_icons";
