--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -7,6 +7,10 @@ block content
 			a(href="./ui/colors.html") UI-KIT
 			a(href="./authorization.html") Авторизация-стартовая
 			a(href="./sms-code.html") Код смс
+			a(href="./authorization-finish.html") Завершить авторизацию
+			a(href="./main.html") Главная
+
+			
 		
 			
 			
