--- a/src/pug/pages/main.pug
+++ b/src/pug/pages/main.pug
@@ -14,9 +14,93 @@ block content
 				.header-title
 					.h-18 Главная
 	main.main
-		.promo(style="background-image: -webkit-image-set(url('./img/bg.webp') 1x, url('./img/bg@2x.webp') 2x); background-image: image-set(url('./img/bg.webp') 1x, url('./img/bg@2x.webp') 2x);")
-			.promo-title
-				h1.h-27 Межевой план
-				.promo-subtitle Составим быстро и качественно
+		section.promo(style="background-image: -webkit-image-set(url('./img/bg.webp') 1x, url('./img/bg@2x.webp') 2x); background-image: image-set(url('./img/bg.webp') 1x, url('./img/bg@2x.webp') 2x);")
+			.container
+				.promo-title
+					h1.h-27 Межевой план
+					.promo-subtitle Составим быстро и качественно
+
+		section.our-services
+			.container
+				.prev-text.gap-15
+					.badge
+						span Акция!
+					p.fs-16 Только до конца декабря 2025 года при заказе технического плана, консультация специалиста в подарок
+					
+					a.link-border.fs-13(href="#!") подробнее »
+
+			.our-services-list
+				+service-item('consultation', 'Консультация по документам', 'Профессиональная консультация кадастрового инженера по документам на недвижимость')
+				+service-item('tool', 'Выезд на объект', 'Определение координат в границах населенного пункта или СНТ на сельхоз землях могут проводиться только с помощью геодезического оборудования', '(определение координат/вынос координат)')
+				+service-item('technical-plan', 'Технический план', 'представляет собой документ, в котором указаны сведения о здании, сооружении, помещении,  машино-месте и т.д.')
+				
+
+		section.faq
+			.container
+				h2.h2 Вопросы / Ответы
+				.acordion-wrapper(data-mode='single')
+					
+					.acordion-item.acordion-item--active
+						.acordion-button
+							.acordion-item__title Как получить кадастровый паспорт?
+							.acordion-item__icon
+								
+						.acordion-body
+							.acordion-body__content
+								p Для получения кадастрового паспорта необходимо обратиться в местное управление Росреестра или воспользоваться услугами кадастрового инженера. Вам потребуется предоставить документы, подтверждающие право собственности на участок, а также техническую документацию, если она имеется. После подачи заявления и проверки документов вам выдадут кадастровый паспорт.
+					
+					.acordion-item
+						.acordion-button
+							.acordion-item__title Как узнать кадастровую стоимость объекта недвижимости?
+							.acordion-item__icon
+								
+						.acordion-body
+							.acordion-body__content
+								p Для получения кадастрового паспорта необходимо обратиться в местное управление Росреестра или воспользоваться услугами кадастрового инженера. Вам потребуется предоставить документы, подтверждающие право собственности на участок, а также техническую документацию, если она имеется. После подачи заявления и проверки документов вам выдадут кадастровый паспорт.
+					
+					
+					.acordion-item
+						.acordion-button
+							.acordion-item__title Что такое межевание земельного участка и зачем оно нужно?
+							.acordion-item__icon
+								
+						.acordion-body
+							.acordion-body__content
+								p Для получения кадастрового паспорта необходимо обратиться в местное управление Росреестра или воспользоваться услугами кадастрового инженера. Вам потребуется предоставить документы, подтверждающие право собственности на участок, а также техническую документацию, если она имеется. После подачи заявления и проверки документов вам выдадут кадастровый паспорт.
+					
+					.acordion-item
+						.acordion-button
+							.acordion-item__title Как зарегистрировать право собственности на недвижимость?
+							.acordion-item__icon
+								
+						.acordion-body
+							.acordion-body__content
+								p Для получения кадастрового паспорта необходимо обратиться в местное управление Росреестра или воспользоваться услугами кадастрового инженера. Вам потребуется предоставить документы, подтверждающие право собственности на участок, а также техническую документацию, если она имеется. После подачи заявления и проверки документов вам выдадут кадастровый паспорт.
+					.acordion-item
+						.acordion-button
+							.acordion-item__title Каковы сроки получения кадастровых услуг?
+							.acordion-item__icon
+								
+						.acordion-body
+							.acordion-body__content
+								p Для получения кадастрового паспорта необходимо обратиться в местное управление Росреестра или воспользоваться услугами кадастрового инженера. Вам потребуется предоставить документы, подтверждающие право собственности на участок, а также техническую документацию, если она имеется. После подачи заявления и проверки документов вам выдадут кадастровый паспорт.
+					.acordion-item
+						.acordion-button
+							.acordion-item__title Сколько стоит консультация?
+							.acordion-item__icon
+								
+						.acordion-body
+							.acordion-body__content
+								p Для получения кадастрового паспорта необходимо обратиться в местное управление Росреестра или воспользоваться услугами кадастрового инженера. Вам потребуется предоставить документы, подтверждающие право собственности на участок, а также техническую документацию, если она имеется. После подачи заявления и проверки документов вам выдадут кадастровый паспорт.
+					.acordion-item
+						.acordion-button
+							.acordion-item__title Как получить технический паспорт на объект?
+							.acordion-item__icon
+								
+						.acordion-body
+							.acordion-body__content
+								p Для получения кадастрового паспорта необходимо обратиться в местное управление Росреестра или воспользоваться услугами кадастрового инженера. Вам потребуется предоставить документы, подтверждающие право собственности на участок, а также техническую документацию, если она имеется. После подачи заявления и проверки документов вам выдадут кадастровый паспорт.
 			
+	include ../sections/_footer-menu
+	
 	-var title = "Главная";
