--- a/src/pug/ui/components.pug
+++ b/src/pug/ui/components.pug
@@ -28,19 +28,21 @@ html(lang="ru")
 						.badge
 							span Акция!
 					br
-					.service-preview
-						.service-preview__img
-							img(src='../img/consultation.webp', srcset='../img/consultation@2x.webp 2x' width='36' height='36' loading='lazy' alt='img')
-						.service-preview__txt
-							.h3 Консультация по документам
-							p.fs-16 Профессиональная консультация кадастрового инженера по документам на недвижимость
-					pre.
-						.service-preview
-							.service-preview__img
+					.service-item
+						.service-item-content
+							.service-item__img
 								img(src='../img/consultation.webp', srcset='../img/consultation@2x.webp 2x' width='36' height='36' loading='lazy' alt='img')
-							.service-preview__txt
+							.service-item__txt
 								.h3 Консультация по документам
 								p.fs-16 Профессиональная консультация кадастрового инженера по документам на недвижимость
+					pre.
+						.service-item
+							.service-item-content
+								.service-item__img
+									img(src='../img/consultation.webp', srcset='../img/consultation@2x.webp 2x' width='36' height='36' loading='lazy' alt='img')
+								.service-item__txt
+									.h3 Консультация по документам
+									p.fs-16 Профессиональная консультация кадастрового инженера по документам на недвижимость
 					br
 					.service-card
 						.service-card__header
