--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,6 +14,9 @@
 @use "blocks/_service-card";
 @use "sections/_authorization";
 @use "sections/_promo";
+@use "sections/_our-services";
+@use "sections/_faq";
+
 // @import "base/_grids";
 // @import "base/_typography";
 // @import "base/_icons";
