--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -87,6 +87,7 @@ body {
 	-webkit-font-smoothing: subpixel-antialiased;
 	-moz-osx-font-smoothing: auto;
     color: var(--osnovnoy-tekst);
+    
 }
 p, h1, h2, h3,h4,ul,ol{margin: 0;}	
 
@@ -97,6 +98,12 @@ p, h1, h2, h3,h4,ul,ol{margin: 0;}
     margin: 0 auto;
 }
 .container-small{max-width: 390px;}
+.gap-15{
+    display: grid;
+   grid-template-columns: 1fr;
+    gap:15px;
+}
+.main{padding-bottom: 85px;}
 .badge{
     position: relative;
     display: flex;
