--- a/src/scss/blocks/_nav-menus.scss
+++ b/src/scss/blocks/_nav-menus.scss
@@ -9,13 +9,18 @@
 	padding-bottom: 9px;
 	height: 65px;
 	box-shadow: 0 3px 20px 0 rgba(0, 0, 0, 0.1);
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	z-index: 10;
 }
 .nav-menu{
 	display: flex;
 	column-gap: 16px;
 	max-width: var(--container_Width);
 	padding-inline: var(--container_padding_inline);
-	
+	margin:0 auto;
 	.nav-menu-link{
 		display: flex;
 		flex-direction: column;
