--- a/src/pug/ui/components.pug
+++ b/src/pug/ui/components.pug
@@ -49,4 +49,4 @@ html(lang="ru")
 							img(src='../img/consultation.webp', srcset='../img/consultation@2x.webp 2x' width='36' height='36' loading='lazy' alt='img')
 							.h-18 Консультация по документам
 						.service-card__body
-							p.fs-16 ППрофессиональная консультация кадастрового инженера по документам на недвижимость
+							p.fs-16 Профессиональная консультация кадастрового инженера по документам на недвижимость
