--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,6 +16,9 @@
 @use "sections/_promo";
 @use "sections/_our-services";
 @use "sections/_faq";
+@use "sections/_services-page";
+@use "sections/_single-service";
+
 
 // @import "base/_grids";
 // @import "base/_typography";
