--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -9,6 +9,8 @@ block content
 			a(href="./sms-code.html") Код смс
 			a(href="./authorization-finish.html") Завершить авторизацию
 			a(href="./main.html") Главная
+			a(href="./services.html") Услуги
+			a(href="./single-service.html") Об услуге
 
 			
 		
