--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -103,7 +103,8 @@ p, h1, h2, h3,h4,ul,ol{margin: 0;}
    grid-template-columns: 1fr;
     gap:15px;
 }
-.main{padding-bottom: 85px;}
+.main, .main-inner{padding-bottom: 85px;}
+.main-inner{padding-top: 16px;}
 .badge{
     position: relative;
     display: flex;
