--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -32,7 +32,7 @@
 }
 .h-18{font-weight: 600;}
 .fs-15,.fs-16, .fs-18{
-	font-family: var(--second-family);
+	// font-family: var(--second-family);
 	line-height: 167%;
 }
 .fs-18{font-weight: 400;}
